# plots

./: Cargo.toml  build.rs
assets/: chart.html
client/: plots.rs
json/: plot.json
proto/: plot.proto
src/: data.rs  image_plots.rs  main.rs  web.rs
src/charms/: image_charms.rs  mod.rs  types.rs
src/grpc/: grpc.rs  mod.rs  server.rs  service.rs  types.rs
